--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -73,6 +73,9 @@
           .tablecontent{
             margin-left: 0;
             margin-right: 0;
+            padding-left: 20px;
+            padding-right: 20px;
+            padding-bottom: 20px;
           }
         </style>
     </head>
@@ -135,7 +138,7 @@
                     </div>
                 </div>
                 <div >
-                      <div class="container tablecontent wrap_white">
+                      <div class=" tablecontent wrap_white">
                       <button type="button" class="btn btn-info" ><a href="./upload">上传新闻</a></button>
 
                           <table class="table table-bordered table-hover">
@@ -170,7 +173,7 @@
                     </div>
                 </div>
                 <div >
-                    <div class="container tablecontent wrap_white">
+                    <div class=" tablecontent wrap_white">
                         <table class="table table-bordered table-hover">
                           <colgroup>
                             <col style="width:10%">
@@ -200,7 +203,7 @@
                     </div>
                 </div>
                 <div >
-                    <div class="container tablecontent wrap_white">
+                    <div class=" tablecontent wrap_white">
                         <table class="table table-bordered table-hover">
                           <colgroup>
                             <col style="width:5%">
