--- a/views/examine.ejs
+++ b/views/examine.ejs
@@ -62,6 +62,9 @@
         .tablecontent{
           margin-left: 0;
           margin-right: 0;
+          padding-left: 20px;
+          padding-right: 20px;
+          padding-bottom: 20px;
         }
         </style>
     </head>
@@ -132,7 +135,7 @@
                         </div>
                     </div>
                     <div class="wrap wrap_white pt20">
-                        <div class="container tablecontent wrap_white">
+                        <div class=" tablecontent wrap_white">
                             <h3>现有管理员</h3>
                             <table class="table table-bordered table-hover">
                               <colgroup>
